[package]
name = "ipscan"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.4"
oping = "0.3.3"
ctrlc = "3.0"
stopwatch= "0.0.7"
tokio = "0.1"
async-std = { version= "1.2.0", features=["attributes"]}